# min-devkit-mode2

./: .gitmodules  CMakeLists.txt
cmake/: add_project.cmake
script/: c74_add_project.cmake
source/min-api/: CMakeLists.txt
source/min-api/script/: Config.cmake.in  add_min_target.cmake  c74_add_min_target.cmake  min-api.cmake
source/min-api/test/: add_min_unit_test.cmake
source/min-lib/: CMakeLists.txt
source/min-lib/test/: min-lib-unittest.cmake
source/projects/mc.min.info_tilde/: CMakeLists.txt
source/projects/min.beat.pattern/: CMakeLists.txt
source/projects/min.beat.random/: CMakeLists.txt
source/projects/min.buffer.index_tilde/: CMakeLists.txt
source/projects/min.buffer.loop_tilde/: CMakeLists.txt
source/projects/min.convolve/: CMakeLists.txt
source/projects/min.dict.join/: CMakeLists.txt
source/projects/min.edge_tilde/: CMakeLists.txt
source/projects/min.edgelow_tilde/: CMakeLists.txt
source/projects/min.environment/: CMakeLists.txt
source/projects/min.hello-world/: CMakeLists.txt
source/projects/min.jit.clamp/: CMakeLists.txt
source/projects/min.jit.stencil/: CMakeLists.txt
source/projects/min.list.process/: CMakeLists.txt
source/projects/min.markdown/: CMakeLists.txt
source/projects/min.meter_tilde/: CMakeLists.txt
source/projects/min.multitouch/: CMakeLists.txt
source/projects/min.note.make/: CMakeLists.txt
source/projects/min.pan_tilde/: CMakeLists.txt
source/projects/min.patcher.control/: CMakeLists.txt
source/projects/min.phasor_tilde/: CMakeLists.txt
source/projects/min.pi/: CMakeLists.txt
source/projects/min.prefs/: CMakeLists.txt
source/projects/min.progress/: CMakeLists.txt
source/projects/min.project/: CMakeLists.txt
source/projects/min.remote/: CMakeLists.txt
source/projects/min.sift_tilde/: CMakeLists.txt
source/projects/min.stress_tilde/: CMakeLists.txt
source/projects/min.textslider/: CMakeLists.txt
source/projects/min.threadcheck/: CMakeLists.txt
source/projects/min.xfade_tilde/: CMakeLists.txt
